[tool.poetry]
name = "autoarcher"
version = "0.1.0"
description = "Unblock IPs from Archer router"
authors = ["NBPub"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"
selenium = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
